--- a/app/src/main/res/layout/loginscreen.xml
+++ b/app/src/main/res/layout/loginscreen.xml
@@ -10,92 +10,108 @@
         android:id="@+id/signIn_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="101dp"
+        android:layout_marginEnd="299dp"
         android:text="@string/signIn"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="101dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/noAccount_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="59dp"
+        android:layout_marginEnd="98dp"
         android:text="@string/noAccount"
         android:textColor="@android:color/darker_gray"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="184dp" />
+        app:layout_constraintEnd_toStartOf="@+id/signUp_id"
+        app:layout_constraintTop_toBottomOf="@+id/signIn_id" />
 
     <TextView
         android:id="@+id/signUp_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="184dp"
+        android:layout_marginEnd="66dp"
         android:text="@string/signUp"
         android:textColor="#2B3FFF"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="296dp"
-        tools:layout_editor_absoluteY="184dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/email_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="318dp"
         android:text="@string/email"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="228dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/noAccount_id" />
 
     <TextView
         android:id="@+id/password_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="289dp"
         android:text="@string/password"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="325dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
 
     <TextView
         android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="212dp"
         android:text="@string/forgotPassword"
         android:textColor="@android:color/darker_gray"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="410dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="353dp"
         android:layout_height="55dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="27dp"
         android:background="#3F51B5"
         android:backgroundTint="#3F51B5"
         android:backgroundTintMode="src_over"
         android:text="@string/signIn"
         app:cornerRadius="3dp"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="629dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />
 
     <EditText
         android:id="@+id/editTextText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="146dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Name"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="254dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_id" />
 
     <EditText
         android:id="@+id/editTextText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="145dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Name"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="355dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password_id" />
 </androidx.constraintlayout.widget.ConstraintLayout>
