--- a/app/src/main/res/layout/signupscreen.xml
+++ b/app/src/main/res/layout/signupscreen.xml
@@ -10,8 +10,8 @@
         android:id="@+id/loginButton"
         android:layout_width="106dp"
         android:layout_height="43dp"
-        android:layout_marginStart="94dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="80dp"
         android:text="Login"
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/haveAccountTV"
@@ -19,12 +19,14 @@
 
     <TextView
         android:id="@+id/haveAccountTV"
-        android:layout_height="wrap_content"
+        android:layout_width="169dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="20dp"
         android:text="Already have an account?"
         android:textColor="@android:color/darker_gray"
-        app:layout_constraintTop_toBottomOf="@+id/signUpText"
-        tools:layout_editor_absoluteX="44dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signUpText" />
 
     <EditText
         android:id="@+id/confirmPasswordET"
