--- a/app/src/main/res/layout/loginscreen.xml
+++ b/app/src/main/res/layout/loginscreen.xml
@@ -66,7 +66,7 @@
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+        app:layout_constraintTop_toBottomOf="@+id/email_ET" />
 
     <TextView
         android:id="@+id/forgot_password"
@@ -77,7 +77,7 @@
         android:text="@string/forgotPassword"
         android:textColor="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
+        app:layout_constraintTop_toBottomOf="@+id/password_ET" />
 
     <Button
         android:id="@+id/button"
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toBottomOf="@+id/forgot_password" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/email_ET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -105,7 +105,7 @@
         app:layout_constraintTop_toBottomOf="@+id/email_id" />
 
     <EditText
-        android:id="@+id/editTextText2"
+        android:id="@+id/password_ET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
