--- a/app/src/main/res/layout/calendarscreen.xml
+++ b/app/src/main/res/layout/calendarscreen.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <CalendarView
+        android:id="@+id/calendar"
+        android:layout_width="414dp"
+        android:layout_height="383dp"
+        android:layout_weight="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:minDate="01012023"
+        android:maxDate="01012032"/>
+
+    <ListView
+        android:layout_width="419dp"
+        android:layout_height="429dp"
+        android:layout_weight="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendar" />
+</androidx.constraintlayout.widget.ConstraintLayout>
