--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#0000FF</color>
+    <color name="blue">#2b53eb</color>
+    <color name="gray">#373737</color>
+    <color name="lightblue">#c4dbfa</color>
 </resources>
