--- a/app/src/main/res/layout/loginscreen.xml
+++ b/app/src/main/res/layout/loginscreen.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#353535">
+    android:background="@color/gray">
 
     <TextView
-        android:id="@+id/signIn_id"
+        android:id="@+id/login_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="101dp"
         android:layout_marginEnd="299dp"
-        android:text="@string/signIn"
+        android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -26,9 +26,9 @@
         android:layout_marginTop="59dp"
         android:layout_marginEnd="98dp"
         android:text="@string/noAccount"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/loginTV"
-        app:layout_constraintTop_toBottomOf="@+id/signIn_id" />
+        app:layout_constraintTop_toBottomOf="@+id/login_id" />
 
     <TextView
         android:id="@+id/loginTV"
@@ -37,7 +37,7 @@
         android:layout_marginTop="184dp"
         android:layout_marginEnd="66dp"
         android:text="@string/signUp"
-        android:textColor="#2B3FFF"
+        android:textColor="@color/blue"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -75,7 +75,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="212dp"
         android:text="@string/forgotPassword"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_ET" />
 
@@ -88,7 +88,7 @@
         android:background="#3F51B5"
         android:backgroundTint="#3F51B5"
         android:backgroundTintMode="src_over"
-        android:text="@string/signIn"
+        android:text="@string/login"
         app:cornerRadius="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgot_password" />
