--- a/app/src/main/res/layout/loginscreen.xml
+++ b/app/src/main/res/layout/loginscreen.xml
@@ -85,8 +85,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="27dp"
-        android:background="#3F51B5"
-        android:backgroundTint="#3F51B5"
+        app:backgroundTint="@color/blue"
         android:backgroundTintMode="src_over"
         android:text="@string/login"
         app:cornerRadius="3dp"
