--- a/app/src/main/res/layout/signupscreen.xml
+++ b/app/src/main/res/layout/signupscreen.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="80dp"
         android:text="Login"
+        app:backgroundTint="@color/blue"
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/haveAccountTV"
         app:layout_constraintTop_toTopOf="parent" />
@@ -145,6 +146,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="66dp"
         android:textColor="@color/white"
+        app:backgroundTint="@color/blue"
         android:layout_marginBottom="60dp"
         android:text="@string/sign_up"
         app:layout_constraintBottom_toBottomOf="parent"
