--- a/app/src/main/res/layout/chosenactivityscreen.xml
+++ b/app/src/main/res/layout/chosenactivityscreen.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="71dp"
         android:layout_marginBottom="26dp"
+        app:backgroundTint="@color/blue"
         android:text="@string/signUp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -114,6 +115,7 @@
         android:layout_height="146dp"
         android:layout_marginTop="4dp"
         android:textColor="@color/white"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
