--- a/app/src/main/res/layout/optionsscreen.xml
+++ b/app/src/main/res/layout/optionsscreen.xml
@@ -127,6 +127,7 @@
         android:layout_marginTop="31dp"
         android:layout_marginEnd="12dp"
         android:text="@string/featured"
+        app:backgroundTint="@color/blue"
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintTop_toBottomOf="@+id/city_id" />
 
@@ -138,6 +139,7 @@
         android:layout_marginTop="142dp"
         android:layout_marginEnd="75dp"
         android:text="@string/feed"
+        app:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
