--- a/app/src/main/res/layout/chosenactivityscreen.xml
+++ b/app/src/main/res/layout/chosenactivityscreen.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/blurbTV"
-        android:layout_width="309dp"
-        android:layout_height="216dp"
+        android:layout_width="303dp"
+        android:layout_height="103dp"
         android:layout_marginStart="78dp"
         android:layout_marginTop="20dp"
         android:text="Blurb"
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="156dp"
+        android:layout_marginTop="68dp"
         android:text="Event"
         android:textColor="@color/white"
         android:textSize="28sp"
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:text="nashvillehumane.org"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,16 +85,16 @@
         android:layout_weight="1"
         android:text="Sunday, October 8"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eventNameTV" />
+        app:layout_constraintTop_toBottomOf="@+id/card_view" />
 
     <TextView
         android:id="@+id/timeTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
-        android:textColor="@color/white"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="10:00 am - 5:00 pm"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addressTV" />
 
@@ -109,15 +109,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateTV" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="411dp"
-        android:layout_height="146dp"
-        android:layout_marginTop="4dp"
-        android:textColor="@color/white"
-        android:scaleType="centerCrop"
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="267dp"
+        android:layout_height="186dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="88dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/food" />
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/food"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
