--- a/app/src/main/res/layout/optionsscreen.xml
+++ b/app/src/main/res/layout/optionsscreen.xml
@@ -139,11 +139,12 @@
         android:layout_marginTop="142dp"
         android:layout_marginEnd="75dp"
         android:text="@string/feed"
-        app:backgroundTint="@color/blue"
+        app:backgroundTint="#4C4B4B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
         android:layout_width="213dp"
         android:layout_height="172dp"
         android:layout_marginTop="10dp"
