--- a/app/src/main/res/layout/loginscreen.xml
+++ b/app/src/main/res/layout/loginscreen.xml
@@ -64,6 +64,7 @@
         android:text="@string/password"
         android:textColor="@color/white"
         android:textSize="15sp"
+        android:inputType="textPassword"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_ET" />
@@ -90,7 +91,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="146dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_id" />
 
@@ -101,7 +103,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="145dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="textPassword"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_id" />
 </androidx.constraintlayout.widget.ConstraintLayout>
