--- a/app/src/main/res/layout/signupscreen.xml
+++ b/app/src/main/res/layout/signupscreen.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="44dp"
         android:layout_marginTop="20dp"
         android:text="Already have an account?"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUpText" />
 
@@ -111,6 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:ems="10"
+        android:textColor="@color/white"
         android:hint="@string/enter_valid_email"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
