--- a/app/src/main/res/layout/optionsscreen.xml
+++ b/app/src/main/res/layout/optionsscreen.xml
@@ -7,32 +7,31 @@
     android:background="@color/gray">
 
     <TextView
-        android:id="@+id/city_id"
+        android:id="@+id/eventWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="87dp"
-        android:text="@string/city"
-        android:textColor="@color/white"
-        android:textSize="18sp"
+        android:text="Welcome"
+        android:textColor="@color/blue"
+        android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="261dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="264dp"
         android:text="@string/popular"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toSignUp" />
-
-
 
     <Button
         android:id="@+id/button3"
@@ -63,88 +62,12 @@
         android:id="@+id/toSignUp"
         android:layout_width="114dp"
         android:layout_height="45dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="18dp"
         android:text="@string/featured"
         app:backgroundTint="@color/blue"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/city_id" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="213dp"
-        android:layout_height="172dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="156dp"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerViewEvents">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-            <ImageView
-                android:id="@+id/header_image2"
-                android:layout_width="216dp"
-                android:layout_height="81dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/fooddrivepic"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/title2"
-                android:layout_width="164dp"
-                android:layout_height="17dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="36dp"
-                android:text="Nashville Rescue Mission"
-                android:textSize="13sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/header_image2" />
-
-            <TextView
-                android:id="@+id/location2"
-                android:layout_width="100dp"
-                android:layout_height="12dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="96dp"
-                android:text="250 Bradyville Pike"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/title2" />
-
-            <TextView
-                android:id="@+id/date2"
-                android:layout_width="101dp"
-                android:layout_height="12dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="100dp"
-                android:text="Tuesday, October 10"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/location2" />
-
-            <TextView
-                android:id="@+id/time2"
-                style="@style/TextAppearance.MaterialComponents.Body2"
-                android:layout_width="141dp"
-                android:layout_height="19dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="61dp"
-                android:text="12:00pm - 3:00pm"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/date2" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintTop_toBottomOf="@+id/eventWelcome" />
 
     <Button
         android:id="@+id/toProfButton"
@@ -159,15 +82,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewEvents"
-        android:layout_width="412dp"
-        android:layout_height="224dp"
-        android:layout_marginTop="2dp"
+        android:layout_width="365dp"
+        android:layout_height="430dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="16dp"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:padding="8dp"
         android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
