--- a/app/src/main/res/layout/card_event.xml
+++ b/app/src/main/res/layout/card_event.xml
@@ -17,16 +17,15 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="164dp"
-            android:layout_height="17dp"
+            android:layout_width="361dp"
+            android:layout_height="38dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="36dp"
             android:text="event"
-            android:textSize="13sp"
             android:textColor="@color/blue"
+            android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/location"
@@ -64,18 +63,28 @@
             app:layout_constraintTop_toBottomOf="@+id/date" />
 
         <TextView
+            android:id="@+id/blurb"
+            android:layout_width="349dp"
+            android:layout_height="39dp"
+            android:layout_marginEnd="60dp"
+            android:text="blurb"
+            android:textColor="@color/black"
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/time" />
+
+        <TextView
             android:id="@+id/organization"
             android:layout_width="164dp"
             android:layout_height="17dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="36dp"
             android:text="organization"
-            android:textSize="10sp"
             android:textColor="@color/black"
+            android:textSize="10sp"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/time" />
-
+            app:layout_constraintTop_toBottomOf="@+id/blurb" />
 
 
     </LinearLayout>
