--- a/app/src/main/res/layout/chosenactivityscreen.xml
+++ b/app/src/main/res/layout/chosenactivityscreen.xml
@@ -7,12 +7,12 @@
     android:background="@color/gray">
 
     <TextView
-        android:id="@+id/blurbTV"
+        android:id="@+id/eventDescripTextView"
         android:layout_width="303dp"
         android:layout_height="103dp"
         android:layout_marginStart="78dp"
         android:layout_marginTop="20dp"
-        android:text="Nashville Humane Association is committed to finding responsible homes, controlling pet overpopulation, and promoting the humane treatment of animals, all while supporting pets and pet-families in our community."
+        android:text="Blurb"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descriptionTV" />
@@ -40,12 +40,12 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/eventNameTV"
+        android:id="@+id/eventNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="68dp"
-        android:text="Humane Society Fundraiser Dinner"
+        android:text="Name"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -53,15 +53,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/linkTV"
+        android:id="@+id/eventOrgTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
         android:layout_marginTop="16dp"
-        android:text="nashvillehumane.org"
+        android:text="Org"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timeTV" />
+        app:layout_constraintTop_toBottomOf="@+id/eventTimeTextView" />
 
     <TextView
         android:id="@+id/descriptionTV"
@@ -73,41 +73,41 @@
         android:text="Description:"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linkTV" />
+        app:layout_constraintTop_toBottomOf="@+id/eventOrgTextView" />
 
     <TextView
-        android:id="@+id/dateTV"
+        android:id="@+id/eventDateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
         android:textColor="@color/white"
         android:layout_marginTop="36dp"
         android:layout_weight="1"
-        android:text="Sunday, October 8"
+        android:text="Evnet Date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card_view" />
 
     <TextView
-        android:id="@+id/timeTV"
+        android:id="@+id/eventTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
         android:layout_marginTop="16dp"
-        android:text="10:00 am - 5:00 pm"
+        android:text="Event Time"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addressTV" />
+        app:layout_constraintTop_toBottomOf="@+id/eventLocationTextView" />
 
     <TextView
-        android:id="@+id/addressTV"
+        android:id="@+id/eventLocationTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
         android:textColor="@color/white"
         android:layout_marginTop="12dp"
-        android:text="213 Oceola Ave, Nashville, TN 37209"
+        android:text="eventt Address"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateTV" />
+        app:layout_constraintTop_toBottomOf="@+id/eventDateTextView" />
 
 
     <androidx.cardview.widget.CardView
