12/11 should be final commit, added comments, double checked for error handling

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -145,7 +145,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewEvents"
             android:layout_width="match_parent"
-            android:layout_height="182dp" />
+            android:layout_height="match_parent" />
     </RelativeLayout>
 
     <Button
@@ -153,7 +153,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="16dp"
         android:text="@string/logout"
         app:backgroundTint="@color/blue"
